Add ButtonGroup test

--- a/test-css-package.html
+++ b/test-css-package.html
@@ -42,6 +42,18 @@
   </section>
 
   <section>
+    <h1>Grouped Buttons</h1>
+    <div>
+      <div class="ui-button-group">
+        <button class="ui-btn ui-btn--medium ui-btn--tertiary ui-btn--grouped">First Button</button>
+        <button class="ui-btn ui-btn--medium ui-btn--tertiary ui-btn--grouped">Second Button</button>
+        <button class="ui-btn ui-btn--medium ui-btn--tertiary ui-btn--grouped">Third Button</button>
+        <button class="ui-btn ui-btn--medium ui-btn--tertiary ui-btn--grouped">Fourth Button</button>
+      </div>
+    </div>
+  </section>
+
+  <section>
     <h1>ToggleButton</h1>
     <div>
       <div class="ui-toggle-button">
