Compat fixes to input

--- a/test-css-package.html
+++ b/test-css-package.html
@@ -128,6 +128,23 @@
       </div>
     </div>
   </section>
+
+  <section>
+    <h1>Radio</h1>
+    <div>
+
+      <div class="ui-radio ui-radio--small">
+        <input type="radio" id="4">
+        <label for="4"></label>
+      </div>
+
+      <div class="ui-radio ui-radio--medium">
+        <input type="radio" id="5">
+        <label for="5"></label>
+      </div>
+
+    </div>
+  </section>
   
 </body>
 </html>
